<resources>
    <string name="app_name">Note</string>
    <string name="createnote">Создание быстрой заметки</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="registration">Регистрация</string>
    <string name="log_in">Вход</string>
    <string name="privateNotes">Личные заметки</string>
    <string name="createPrivateNotes">Создание личной заметки</string>
    <string name="ShowQuickNotes">Просмотреть заметку</string>
    <string name="Login">Войти</string>
    <string name="Logout">Выйти</string>
    <string name="OK">OK</string>
    <string name="Cancel">Отмена</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="create">Создать</string>
    <string name="Load">Загрузить</string>
    <string name="InputNoteID">Введите id заметки</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="email">Почта</string>
    <string name="register">Зарегистрироваться</string>
    <string name="Required">Необходимо</string>
    <string name="charReq">как минимум 3 символа</string>
    <string name="incorrectEmail">Неправильный формат почты</string>
    <string name="equalpassword">Пароли должны быть одинаковые</string>
    <string name="namelocked">Имя занято</string>
    <string name="emaillocked">Такая почта уже зарегистрирована</string>
    <string name="idlocked">ID занят</string>
    <string name="quitSeriosly">Действительно выйти?</string>
    <string name="void2">Пусто</string>
    <string name="deletewhat">Удалить?</string>
    <string name="copyingID">ID скопирован в буфер обмена</string>
    <string name="noteNotFound">Заметка не найдена</string>
    <string name="vishedID">желаемый ID</string>
    <string name="nothingnotes">У вас нет заметок</string>
    <string name="ourApp">Phoenix</string>
    <string name="invalidLogin">Неправильный логин</string>
</resources>
