<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionlogout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/Logout"
        android:visible="false"
        />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/actionlogin"
            android:title="@string/Login"
            android:icon="@drawable/ic_input_black_24dp" />
        <item
            android:id="@+id/actionone"
            android:title="@string/createnote"
            android:tint="?attr/colorAccent"
            android:icon="@drawable/baseline_add_black_18dp"/>
        <item
            android:visible="false"
            android:id="@+id/actioncreateNote"
            android:icon="@drawable/ic_note_add_black_24dp"
            android:title="@string/createPrivateNotes"
            />
        <item
            android:id="@+id/actionshow"
            android:icon="@drawable/ic_remove_red_eye_black_24dp"
            android:title="@string/ShowQuickNotes"/>
        <item
            android:visible="false"
            android:id="@+id/actionsaved"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/privateNotes"/>

    </group>

</menu>