<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10sp"
    android:paddingTop="50sp"
    app:cardBackgroundColor="#fff8e1"
    android:layout_gravity="center"
    android:layout_width="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/log_loginLay"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="20sp"
        android:hint="@string/login"
        app:boxCornerRadiusBottomEnd="0sp"
        app:boxCornerRadiusBottomStart="0sp"
        app:boxCornerRadiusTopEnd="10sp"
        app:boxCornerRadiusTopStart="10sp"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText

            android:id="@+id/logtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/log_passLay"
        app:boxCornerRadiusTopStart="10sp"
        app:boxCornerRadiusTopEnd="10sp"
        app:boxCornerRadiusBottomEnd="0sp"
        app:boxCornerRadiusBottomStart="0sp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:hint="@string/password">

        <android.support.design.widget.TextInputEditText
            android:inputType="textPassword"
            android:id="@+id/passtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="10sp"
    android:layout_marginHorizontal="20sp">

    <android.support.design.button.MaterialButton
        app:cornerRadius="5sp"
        android:id="@+id/loginbutton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="10sp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/log_in"
        android:textAppearance="@style/Widget.MaterialComponents.Button"
        android:textSize="15sp"
        android:textStyle="bold" />

    <android.support.design.button.MaterialButton
        app:cornerRadius="5sp"
        android:id="@+id/registerbutton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10sp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/registration"
        android:textAppearance="@style/Widget.MaterialComponents.Button"
        android:textSize="15sp"
        android:textStyle="bold" />
</LinearLayout>
</LinearLayout>
</android.support.design.card.MaterialCardView>