<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_height="match_parent" android:layout_width="match_parent"
    android:background="?attr/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/reg_appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <android.support.v7.widget.Toolbar

        android:id="@+id/reg_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    </LinearLayout>
<android.support.design.card.MaterialCardView
    app:cardBackgroundColor="#fff8e1"
    android:layout_gravity="center"
    app:cardCornerRadius="10sp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout

        app:errorEnabled="true"
        android:id="@+id/reg_loginlay"
        app:boxCornerRadiusTopStart="10sp"
        app:boxCornerRadiusTopEnd="10sp"
        app:boxCornerRadiusBottomEnd="0sp"
        app:boxCornerRadiusBottomStart="0sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginTop="20sp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:hint="@string/login">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reg_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/regemaillay"
        app:boxCornerRadiusTopStart="10sp"
        app:boxCornerRadiusTopEnd="10sp"
        app:boxCornerRadiusBottomEnd="0sp"
        app:boxCornerRadiusBottomStart="0sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="20sp"
        android:hint="@string/email"
        app:errorEnabled="true"
>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        app:errorEnabled="true"
        android:id="@+id/reg_passLay"
        app:boxCornerRadiusTopStart="10sp"
        app:boxCornerRadiusTopEnd="10sp"
        app:boxCornerRadiusBottomEnd="0sp"
        app:boxCornerRadiusBottomStart="0sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="20sp"
        android:hint="@string/password"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:inputType="textPassword"
            android:id="@+id/reg_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        app:errorEnabled="true"
        android:id="@+id/regpassreplay"
        app:boxCornerRadiusTopStart="10sp"
        app:boxCornerRadiusTopEnd="10sp"
        app:boxCornerRadiusBottomEnd="0sp"
        app:boxCornerRadiusBottomStart="0sp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="20sp"
        android:hint="@string/password"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reg_passrepeat"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>



        <android.support.design.button.MaterialButton
            android:layout_marginTop="20sp"
            android:id="@+id/reg_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/register"
            android:layout_marginBottom="10sp"
            android:textAppearance="@style/Widget.MaterialComponents.Button"
            android:textSize="15sp"
            android:textStyle="bold" />
</LinearLayout>
</android.support.design.card.MaterialCardView>
</android.support.design.widget.CoordinatorLayout>